--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 spring:
   redis:
-    sentinel:
-      master: mymaster
-      nodes: 172.16.13.76:26379
+    cluster:
+      nodes: 172.16.13.76:6401,172.16.13.76:6402,172.16.13.76:6403,172.16.13.76:6404,172.16.13.76:6405,172.16.13.76:6406
+      max-redirects: 6
